--- a/dailyDiet/package.json
+++ b/dailyDiet/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "eslint": "^8.57.0",
     "fastify": "^4.26.1"
   },
   "devDependencies": {
