--- a/dailyDiet/package.json
+++ b/dailyDiet/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "knex": "node --import tsx ./node_modules/.bin/knex"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "fastify": "^4.26.1"
+    "fastify": "^4.26.1",
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
