--- a/dailyDiet/package.json
+++ b/dailyDiet/package.json
@@ -17,7 +17,8 @@
     "eslint": "^8.57.0",
     "fastify": "^4.26.1",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
