--- a/dailyDiet/package.json
+++ b/dailyDiet/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^8.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
