--- a/dailyDiet/package.json
+++ b/dailyDiet/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "fastify": "^4.26.1",
+    "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
     "zod": "^3.22.4"
