--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "dependencies": {
     "@fastify/jwt": "^8.0.0",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "fastify": "^4.26.1",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
+    "test": "^3.3.0",
+    "vitest": "^1.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "supertest": "^6.3.4",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
