--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines":{
+    "node": ">=20"
+  },
   "scripts": {
     "test": "vitest",
     "dev": "tsx watch src/server.ts",
-    "knex": "node --import tsx ./node_modules/.bin/knex"
+    "knex": "node --import tsx ./node_modules/.bin/knex",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +24,6 @@
     "fastify": "^4.26.1",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
     "test": "^3.3.0",
     "vitest": "^1.3.1",
     "zod": "^3.22.4"
@@ -28,7 +31,10 @@
   "devDependencies": {
     "@types/node": "^20.11.20",
     "supertest": "^6.3.4",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "sqlite3": "^5.1.7"
+
   }
 }
