--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": ">=20"
   },
   "scripts": {
@@ -24,17 +24,17 @@
     "fastify": "^4.26.1",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
+    "pg": "^8.11.3",
     "test": "^3.3.0",
     "vitest": "^1.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
-    "sqlite3": "^5.1.7"
-
+    "typescript": "^5.3.3"
   }
 }
